[package]
name = "strzip"
version = "0.1.0"
edition = "2021"
authors = ["StreamZip Contributors"]
description = "Streaming archive extractor with delete-as-you-go disk space optimization"

[[bin]]
name = "strzip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
zip = "2.1"
tar = "0.4"
flate2 = "1.0"
unrar = "0.5"
indicatif = "0.17"
regex = "1.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.3"
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
ratatui = "0.26"
crossterm = "0.27"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
